bug fixes from: http://blog.bryanbibat.net/2011/09/24/starting-a-professional-rails-3-1-app-with-web-app-theme-devise-and-kaminari/ and a couple others

--- a/lib/generators/web_app_theme/themed/templates/view_signup.html.erb
+++ b/lib/generators/web_app_theme/themed/templates/view_signup.html.erb
@@ -9,7 +9,7 @@
       </div>
       <%% end -%>
     </div>
-    <%% form_for :<%= resource_name %>, :url => <%= controller_routing_path %>_path, :html => { :class => 'form' } do |f| -%>
+    <%% form_for :<%= resource_name %>, :url => <%= controller_routing_path %>_index_path, :html => { :class => 'form' } do |f| -%>
       <div class="group wat-cf">
         <div class="left">
           <label class="label">Login</label>
